--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.scss
@@ -4,7 +4,7 @@
   .grid,
   .grid-3 {
     display: grid;
-    grid-template-columns: calc(50% - 12px) calc(50% - 12px);
+    grid-template-columns: calc(50% - 10px) calc(50%);
     grid-column-gap: 24px;
     grid-row-gap: 32px;
 
@@ -17,6 +17,10 @@
     grid-template-columns: calc(33% - 8px) calc(33% - 8px) calc(33% - 8px);
     grid-column-gap: 24px;
     grid-row-gap: 32px;
+
+    .full-width {
+      grid-column: 1/4;
+    }
   }
 
   .resolution-number-wrapper {
@@ -49,6 +53,48 @@
     }
   }
 
+  .container,
+  .container-wide {
+    border: 1px solid colors.$grey-dark;
+    max-width: 438px;
+
+    .soil-table {
+      padding: 16px;
+      display: grid;
+      grid-template-columns: 39% 59%;
+      grid-row-gap: 28px;
+      padding: 10px;
+
+      &.double-table {
+        grid-template-columns: 22% 37% 37%;
+        column-gap: 10px;
+      }
+
+      .full-width {
+        width: 100%;
+      }
+    }
+
+    .label {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-bottom: 0;
+
+      .subtext {
+        margin-bottom: -8px !important;
+      }
+    }
+
+    input {
+      text-align: right;
+      padding-right: 8px;
+    }
+  }
+
+  .container-wide {
+    max-width: 700px;
+  }
   .btn-row {
     justify-content: space-between;
   }
@@ -80,8 +126,21 @@
 
   .decision-component-form {
     .grid-3,
-    grid {
+    .grid {
       margin-bottom: 24px;
     }
+  }
+
+  .soil-text-area {
+    height: 100px !important;
+  }
+
+  .subheading1 {
+    font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif !important;
+    font-size: 19px !important;
+    font-weight: 400 !important;
+    line-height: 24px;
+    color: #565656 !important;
+    margin: 24px 0 !important;
   }
 }
