NOI Time Tracking
* Update time tracker and NOI Cards with new time tracking requirements around showing Due Date and overdue cards
* Small styling changes for all cards

--- a/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/notice-of-intent/notice-of-intent-dialog.component.html
@@ -40,7 +40,7 @@
   </div>
   <div class="header-row">
     <div class="left">
-      <app-time-tracker [application]="noticeOfIntent"></app-time-tracker>
+      <app-time-tracker [data]="noticeOfIntent" [maxActiveDays]="61"></app-time-tracker>
     </div>
     <div class="right">
       <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
