--- a/alcs-frontend/src/app/shared/time-tracker/time-tracker.component.html
+++ b/alcs-frontend/src/app/shared/time-tracker/time-tracker.component.html
@@ -23,7 +23,7 @@
     <mat-icon class="icon">pause</mat-icon>
     {{ pausedDays }}
   </div>
-  <div *ngIf="dueDate">
+  <div *ngIf="dueDate && !paused">
     <span *ngIf="!isOverdue">Due: {{ dueDate | momentFormat }}</span>
     <span class="red-text" *ngIf="isOverdue">Overdue</span>
   </div>
