--- a/portal-frontend/src/app/features/application-details/naru-details/naru-details.component.html
+++ b/portal-frontend/src/app/features/application-details/naru-details/naru-details.component.html
@@ -14,7 +14,7 @@
     What is the purpose of the proposal?
     <app-updated-banner *ngIf="updatedFields.includes('naruPurpose')"></app-updated-banner>
   </div>
-  <div *ngIf="_applicationSubmission.naruPurpose" class="grid-double">
+  <div class="grid-double">
     {{ _applicationSubmission.naruPurpose }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruPurpose"></app-no-data>
   </div>
@@ -24,7 +24,7 @@
       What is the total floor area (m<sup>2</sup>) of the proposed additional residence?
       <app-updated-banner *ngIf="updatedFields.includes('naruFloorArea')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruFloorArea" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruFloorArea }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruFloorArea"></app-no-data>
     </div>
@@ -34,7 +34,7 @@
       or long term.
       <app-updated-banner *ngIf="updatedFields.includes('naruResidenceNecessity')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruResidenceNecessity" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruResidenceNecessity }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruResidenceNecessity"></app-no-data>
     </div>
@@ -43,7 +43,7 @@
       Describe the rationale for the proposed location of the additional residence.
       <app-updated-banner *ngIf="updatedFields.includes('naruLocationRationale')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruLocationRationale" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruLocationRationale }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruLocationRationale"></app-no-data>
     </div>
@@ -53,7 +53,7 @@
       residence.
       <app-updated-banner *ngIf="updatedFields.includes('naruInfrastructure')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruInfrastructure" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruInfrastructure }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruInfrastructure"></app-no-data>
     </div>
@@ -64,7 +64,7 @@
       What is the total floor area (m<sup>2</sup>) of the proposed principal residence?
       <app-updated-banner *ngIf="updatedFields.includes('naruFloorArea')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruFloorArea" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruFloorArea }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruFloorArea"></app-no-data>
     </div>
@@ -74,7 +74,7 @@
       short or long term.
       <app-updated-banner *ngIf="updatedFields.includes('naruResidenceNecessity')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruResidenceNecessity" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruResidenceNecessity }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruResidenceNecessity"></app-no-data>
     </div>
@@ -83,7 +83,7 @@
       Describe the rationale for the proposed location of the principal residence.
       <app-updated-banner *ngIf="updatedFields.includes('naruLocationRationale')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruLocationRationale" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruLocationRationale }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruLocationRationale"></app-no-data>
     </div>
@@ -93,7 +93,7 @@
       residence.
       <app-updated-banner *ngIf="updatedFields.includes('naruInfrastructure')"></app-updated-banner>
     </div>
-    <div *ngIf="_applicationSubmission.naruInfrastructure" class="grid-double">
+    <div class="grid-double">
       {{ _applicationSubmission.naruInfrastructure }}
       <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruInfrastructure"></app-no-data>
     </div>
@@ -104,7 +104,7 @@
     located on the property.
     <app-updated-banner *ngIf="updatedFields.includes('naruExistingStructures')"></app-updated-banner>
   </div>
-  <div *ngIf="_applicationSubmission.naruExistingStructures" class="grid-double">
+  <div class="grid-double">
     {{ _applicationSubmission.naruExistingStructures }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruExistingStructures"></app-no-data>
   </div>
@@ -122,9 +122,11 @@
     the property, including gravel for construction.
     <app-updated-banner *ngIf="updatedFields.includes('naruWillImportFill')"></app-updated-banner>
   </div>
-  <div *ngIf="_applicationSubmission.naruWillImportFill !== null" class="grid-double">
-    {{ _applicationSubmission.naruWillImportFill ? 'Yes' : 'No' }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.naruWillImportFill === null"></app-no-data>
+  <div class="grid-double">
+    <span *ngIf="_applicationSubmission.naruWillImportFill !== null">{{
+      _applicationSubmission.naruWillImportFill ? 'Yes' : 'No'
+    }}</span>
+    <app-no-data [showRequired]="showErrors" *ngIf="_applicationSubmission.naruWillImportFill === null"></app-no-data>
   </div>
 
   <ng-container *ngIf="_applicationSubmission.naruWillImportFill">
