decision ui changes and performance fixes for home page

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
@@ -18,7 +18,10 @@
         <td>{{ component.soilToPlaceVolume }} m<sup>3</sup></td>
       </tr>
       <tr>
-        <td class="soil-table-label">Area</td>
+        <td class="soil-table-label">
+          Area
+          <div class="subtext">Note: 0.01 ha is 100m2</div>
+        </td>
         <td>{{ component.soilToPlaceArea }} ha</td>
       </tr>
       <tr>
