--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/decision-component.component.html
@@ -24,7 +24,7 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="AG Cap*"
+        placeholder="Ag Cap*"
         [clearable]="false"
       ></ng-select>
     </div>
@@ -38,7 +38,7 @@
         bindLabel="label"
         bindValue="value"
         required
-        placeholder="AG Cap Source*"
+        placeholder="Ag Cap Source*"
         [clearable]="false"
       ></ng-select>
     </div>
