--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/turp-input/turp-input.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-components/decision-component/turp-input/turp-input.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form" class="turp-component-form">
-  <div class="grid-3">
+  <div class="grid">
     <mat-form-field appearance="outline" class="date-picker">
       <mat-label>Expiry Date</mat-label>
       <input
