--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -1,4 +1,5 @@
 @use '../../../../../styles/colors';
+
 :host ::ng-deep {
   section {
     margin-bottom: 64px;
@@ -120,6 +121,10 @@
     margin: 0 !important;
     line-height: 24px;
     color: #565656 !important;
+  }
+
+  .subheading1 {
+    color: colors.$grey-dark !important;
   }
 
   .application-pill-wrapper,
